Sostituito `buffs.get(0)` con `buffs.getFirst()` in `PotionGeneratorTool` per migliorare la leggibilità e l'intenzione del codice.